# old_university_projects

./: BezNazwy1.cpp  Diagram1.dia  Diagram1.dia~  FCFS_scheduling.cc  FCFS_scheduling.h  Untitled1.cpp  bazar.cpp  bd.cpp  comptrie.c  computer.h  cpu.h  division_by_zero_exception.h  exceptions.h  function_maxima.h  function_maxima_easy.h  function_maxima_test.cc  illegal_argument_exception.h  instrukcja.h  instrukcja_add.h  instrukcja_div.h  instrukcja_load.h  instrukcja_mul.h  instrukcja_println.h  instrukcja_set.h  instrukcja_store.h  instrukcja_sub.h  instrukcje.h  invalid_address_exception.h  invalid_register_exception.h  ipp1.c  ipp1.dev  ipp3.txt  ipp3commit.txt  kap.cpp  kin.cpp  mal.cpp  mat.cpp  no_cpu_exception.h  schedulingAlgorithm.h  virus_genealogy.h  (+4 more)
SIK/: Makefile  SIK3TK.docx  czekamnaudp.c  err.h  ileczekam.c
dictionary/: CMakeLists.txt  dictionary.c  dictionary.c~  dictionary.h  dictionary.h~  trie.c  trie.c~  trie.h~  word_list.c  word_list.c~  word_list.h  word_list.h~
ipp zad1/: Untitled1.c  test.c  trie1.c  trie1.h  zad1.c
ipp1/: Makefile  hospital.c  parse.c  parse.h  structure.c  structure.h  test.sh
ipp2.1/: CMakeLists.txt
ipp_szpital/: Makefile  hospital.c  parse.c  parse.h  structure.c  structure.h  test.sh
spellcheck-tk334580/: CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake
sred2/: game.sh  middle_ages  suma  wzorcowka.rar
zad2/: README.txt  game.sh
